hello/hello-kubernetes/deploy/helm/old_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-myservicea
  namespace: "hello"
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: hello.k8s.singhjee.in
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-kubernetes-hello-world
          servicePort: 80
